# zhongzhuan

./: .env.example  .gitignore  check_db.py  config.yaml  data.db-shm  data.db-wal  pyproject.toml  requirements-vps.txt  requirements.txt  start.bat  zhongzhuan.service  zhongzhuan.spec
docs/superpowers/plans/: 2026-06-14-zhongzhuan.md
docs/superpowers/specs/: 2026-06-14-zhongzhuan-design.md
scripts/: build.ps1  dev.ps1  green-install.bat  green-uninstall.bat  installer.iss
src/: data.db-shm  data.db-wal
src/zhongzhuan/: __main__.py
src/zhongzhuan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zhongzhuan/admin/: __init__.py  api_auth.py  api_export_import.py  api_groups.py  api_keys.py  api_logs.py  api_models.py  api_service.py  api_stats.py  api_tokens.py  auth.py  notify.py  server.py  ui.py
src/zhongzhuan/config/: __init__.py  config.py  paths.py
src/zhongzhuan/crypto/: __init__.py  aes_cipher.py  dpapi_other.py  dpapi_windows.py
src/zhongzhuan/observability/: __init__.py  log.py
src/zhongzhuan/proxy/: __init__.py  auth.py  handler.py  ratelimit.py  retry.py  scheduler.py  server.py  stream.py
src/zhongzhuan/service/: __init__.py  (+1 more)
tests/: conftest.py  mock_upstream.py  seed_admin_api.py  test_admin.py  test_config.py  test_crypto.py  test_e2e_streaming.py  test_keys_crud.py  test_models_crud.py  test_proxy.py  test_proxy_live.py  test_proxy_retry.py  test_ratelimit.py  test_real_agnes.py  test_real_e2e.py  test_req.json  test_req_stream.json  test_scheduler.py  test_store.py  test_upstream.py  trae_simple.json  trae_test.json
(+13 files in other folders)
