[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhongzhuan"
version = "0.1.0"
description = "Local OpenAI-compatible API relay for AI coding tools"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "aiohttp>=3.9"]

[project.scripts]
zhongzhuan = "zhongzhuan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async",
]